# cant-be-bothered-ai

./: .env.example  .gitignore  Dockerfile  README.md  TODO  count_tokens.py  main.py  pyproject.toml
src/cant_be_bothered/: __init__.py  cli.py
src/cant_be_bothered/audio/: __init__.py  convert.py  cut.py  utils.py
src/cant_be_bothered/summarization/: __init__.py  gemini_client.py  prompts.py
src/cant_be_bothered/transcribtion/: __init__.py  transcriber.py
src/cant_be_bothered/transcription/: diarize.py  transcriber.py
